--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,10 @@
 [user]
-	name = <your full name> 
-  email = <your email>
+	name = Tan Doan
+	email = tdoan87@gmail.com
 [github]
-  user = <github username>
+  user = tanmdoan
 [core]
-  excludesfile = /Users/<mac username>/.gitignore_global
+  excludesfile = /Users/tandoan/.gitignore_global
   pager = delta --theme='Dracula'
   editor = vi
 [interactive]
@@ -15,34 +15,42 @@
   a   = add
   aa  = add -A :/
   ap  = add -p
+  nap = git add -N --ignore-removal . && gap
   b   = for-each-ref --count=10 --sort=-committerdate refs/heads/ --format='%(refname:short)'
   bd  = branch -D
   bn  = checkout -b
+  br  = browse
   c   = commit
+  ca  = commit -a
   caa = commit -a --amend
+  cl  = clone
+  co  = checkout
   cm  = commit -v -m
   d   = diff
   f   = fetch
   h   = log --pretty=format:'%h %ad | %s [%an]' --graph --date=short
   l   = pull
+  lb  = checkout -
   o   = checkout
   m   = merge
   mf  = merge --ff-only
   p   = push -u
   poh = push -u origin head
+  pr  = pull-request
   s   = stash
   ra  = remote add
   rb  = rebase
   rbc = rebase --continue
   rbi = rebase -i
+  re  = reset
   rr  = remote rm
   rs  = remote -v show
-  rt  = restore
+  ru  = clean  -d  -fx "" # delete untracked files
   rv  = revert
   sa  = stash apply
   sh  = show
   st  = status
-  sw  = switch
+  tr  = branch -t
   ctags = !.git/hooks/ctags
 [apply]
   whitespace = fix
